--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,5 @@
 DB_URI= mongodb://127.0.0.1:27017/courtServer
 SECRET_KEY=donaldo123
+CLOUDINARY_CLOUD_NAME= "dyqiizh2u"
+CLOUDINARY_API_KEY="777844182422136"
+CLOUDINARY_API_SECRET="NsQakZpvzNxjoTQPURSgh6XAfxo"
